--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 
           <li class="list3"> <a class="link" href="https://selinalz.github.io/exercise2/"> <strong> Exercise 2 : </strong> Translating Printed Media to Web Format </a> </li>
 
-          <li class="list4"> <a class="link" href="https://selinalz.github.io/exercise3/
-"> <strong> Exercise 3 : </strong> Multimedia Story </a> </li>
+          <li class="list4"> <a class="link" href="https://selinalz.github.io/exercise3/"> <strong> Exercise 3 : </strong> Multimedia Story </a> </li>
 
-<li class="list5"> <a class="link" href="https://selinalz.github.io/exercise4/
-"> <strong> Exercise 4 : </strong> Media Queries + CSS Animation </a> </li>
+          <li class="list5"> <a class="link" href="https://selinalz.github.io/exercise4/"> <strong> Exercise 4 : </strong> Media Queries + CSS Animation </a> </li>
 
 
         </ol>
